lokasyon sayısı sınırı fixlendi